--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div>
         <h1>unkown</h1>
+        <p>This is an unkown portfolio. I've not decided yet whether to create one or not.</p>
     </div>
    
     <script src="mainscript.js"></script>
