--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content= "unkown portfolio not dicide ">
-    <title>unkown</title>
+    <title>MY PERSONAL PORTFOLIO</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <div>
-        <h1>unkown</h1>
+        <h1>URVI</h1>
         <p>This is an unkown portfolio. I've not decided yet whether to create one or not.</p>
-        <span>i am sudhanshu rajanS</span>
+        <span>i am </span>
     </div>
    
     <script src="mainscript.js"></script>
