all most header complete

--- a/index.html
+++ b/index.html
@@ -10,22 +10,19 @@
     <body>
         <header class="header01">
             <h1 class="mainlogo">Welcome to my portfolio</h1>
-            <nav>
-                <div class="maindiv" >
-                    <ul class="lcontainer">
-                        <li class="litem"><a class="lanchertag" href="#">Home</a></li>
-                        <li class="litem"><a class="lanchertag" href="#">About</a></li>
-                        <li class="litem"><a class="lanchertag" href="#">Skills</a></li>
-                        <li class="litem"><a class="lanchertag" href="#">Projects</a></li>
-                        <li class="litem"><a class="lanchertag" href="#">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="menuicon">
-                    ☰ 
-                </div>
+            <nav class="navcontainer">
+                <input type="checkbox" id="check"/>
+                <label for="check" class="checkbtn">☰</label>
+                <ul class="ulcontainer">
+                    <li class="navlistitem"><a class="nav-a" href="#">Home</a></li>
+                    <li class="navlistitem"><a class="nav-a" href="#">About</a></li>
+                    <li class="navlistitem"><a class="nav-a" href="#">Skills</a></li>
+                    <li class="navlistitem"><a class="nav-a" href="#">Projects</a></li>
+                    <li class="navlistitem"><a class="nav-a" href="#">Contact</a></li>
+                </ul>
             </nav>
+         
         </header>
-
         <script src="mainscript.js"></script>
 
     </body>
