21 nov 2nd update on main and header contents

--- a/index.html
+++ b/index.html
@@ -26,9 +26,18 @@
             </nav>
         </header>
         <section class="section01">
-            
-            <div class="aboutsection"></div>
-
+            <div class="aboutsection">
+                <div class="changetext">
+                    <h1>URVI SINGLA </h1>
+                    <h2>I'm a <span class="changingtext"></span><span class="blinkingcursor">|</span></h2>
+                </div>
+            </div>
+            <div class="aboutsection">
+                <div class="changetext">
+                    <h1>URVI SINGLA </h1>
+                    <h2>I'm a <span class="changingtext"></span><span class="blinkingcursor">|</span></h2>
+                </div>
+            </div>
         </section>
         
         <script src="mainscript.js"></script>
