work on about section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <header class="header01">
+        <h1 class="testing">
+
+        </h1>
+        <header id="header01">
             <h1 class="mainlogo">
                 <img src="./image/logoimage.png" alt="logoimg" class="logoimage"/>
                 <label class="logotext">URVI SINGLA</label>
@@ -32,10 +35,34 @@
                     <h2>I'm a <span class="changingtext"></span><span class="blinkingcursor">|</span></h2>
                 </div>
             </div>
-            <div class="aboutsection">
-                <div class="changetext">
-                    <h1>URVI SINGLA </h1>
-                    <h2>I'm a <span class="changingtext"></span><span class="blinkingcursor">|</span></h2>
+            <div class="aboutme">
+                <div class="about-hp">
+                    <h2 class="about-h">About</h2>
+                    <hr/>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur, ex a condimentum consectetur, velit velit scelerisque justo, at tempor lectus risus ut nisi. Sed viverra, ipsum id euismod rutrum, sem neque dictum arcu, vitae efficitur mi lectus vel mi. Donec euismod, ex vel varius mattis, mauris urna efficitur ex, ac vulputate lectus dolor vel velit.</p>
+                </div>
+                <div class="aboutimginfo">
+                    <div class="aboutimg">
+                        <img src="./image/aboutimg.jpg" alt="Professional photo" width="100%"/>
+                    </div>
+                    <div class="infofirst">
+                        <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia atque neque tempore magni amet voluptatem similique repellendus ex possimus exercitationem?</p>
+                    </div>
+                    <div class="infosec-one">
+
+                    </div>
+                    <div class="infosec-two">
+
+                    </div>
+                    <div class="infosec-icon">
+
+                    </div>
+                    <div class="infosec-three">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla vero dolor amet expedita architecto consequuntur possimus necessitatibus ut aut cum. Sapiente, inventore? Vero animi quam dicta, deserunt quisquam suscipit fuga?</p>
+                    </div>
+                    
+
                 </div>
             </div>
         </section>
