--- a/index.html
+++ b/index.html
@@ -43,17 +43,22 @@
                 </div>
                 <div class="aboutimginfo">
                     <div class="aboutimg">
-                        <img src="./image/aboutimg.jpg" alt="Professional photo" width="100%"/>
+                        <img src="./image/aboutimg.jpg" alt="Professional photo" width="100%" style="max-height: fit-content;" class="proimage"/>
                     </div>
                     <div class="infofirst">
                         <h2>Lorem ipsum dolor sit amet consectetur.</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia atque neque tempore magni amet voluptatem similique repellendus ex possimus exercitationem?</p>
                     </div>
                     <div class="infosec-one">
-
-                    </div>
-                    <div class="infosec-two">
-
+                        <ul class="infosec-list">
+                            <li class="infolist-item">Degree:<label class="infoitem-ans">nahi pata</label></li>
+                            <li class="infolist-item">Email:<label class="infoitem-ans">nahi pata</label></li>
+                            <li class="infolist-item">Phone:<label class="infoitem-ans">nahi pata</label></li>
+                            <li class="infolist-item">Likedln:<label class="infoitem-ans">nahi pata</label></li>
+                            <li class="infolist-item">Work Experience:<label class="infoitem-ans">nahi pata</label></li>
+                            <li class="infolist-item">City:<label class="infoitem-ans">nahi pata</label></li>
+                        </ul>
+                        
                     </div>
                     <div class="infosec-icon">
 
